--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.userosscache
 *.sln.docstates
 
+ClientApp/src/registerServiceWorker.js
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
